--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ server.port=8084
 # Oracle DB
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@gogiari_high?TNS_ADMIN=./src/main/resources/Wallet/
+spring.datasource.url=jdbc:oracle:thin:@gogiari_high?TNS_ADMIN=C:/ws/vscode/toto2/src/main/resources/Wallet/
 spring.datasource.username=ADMIN
 spring.datasource.password=123456789Abcd
 
 # Thymeleaf
-#캐시:개발때만 false 배포시 ture나 삭제
-spring.thymeleaf.cache=false
+#캐시:개발때만 false 배포시 true나 삭제
+spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
